--- a/study-record-access.html
+++ b/study-record-access.html
@@ -127,7 +127,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <option value="study-record-open-degree.html">Open Degree</option>
     <option value="study-record-access.html" selected>Access Module</option>
     <option value="study-record-resit.html">Resit</option>
-      <option value="study-record-failed-resit.html" selected>Failed resit</option>
+      <option value="study-record-failed-resit.html" >Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
     <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
     <option value="study-record-deferred-completed.html">Deferred - completed</option>
@@ -149,12 +149,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <p>You can now enrol on modules starting between 1st September 2015 and 31st August 2016.</p>
     <p><a href="#" class="ou-btn">Choose next modules</a></p>
   </div>
-  <div class="box-expand-collapse-inner">
   <div class="box-expand-collapse">
 
     
     <h2>BA (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> English Literature and Creative Writing (in progress)</h2>
 
+  <div class="box-expand-collapse-inner">
 
 
 <ul class="list-style1">
@@ -202,12 +202,13 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) English Literature and Creative Writing</p>
 
 <hr>
+<dl class="show-hide">
 <dt>Qualification Regulations</dt>
   <dd>
     <p>Regulations specific to your qualification: <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
     <p><a href="#">General Qualification Regulations</a></p>
   </dd>
-<dl class="show-hide">
+
 <dt>Educational aims and learning outcomes</dt>
 <dd>
    
@@ -244,8 +245,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
 </dd>
 
-<dt>&nbsp;</dt>
-<dd>&nbsp;</dd>
 
   <dt>Qualification Fee</dt>
 <dd>
@@ -254,10 +253,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 </dl>
 
-</div> 
-<!-- end box-expand-collapse-inner -->
-</div> <!-- end box-expand-collapse -->
-
+</div> <!-- end box-expand-collapse-inner -->
+</div>
+  
 <p><a href="profile.html">Back to Profile</a></p>
 
 </div>
