--- a/study-status.html
+++ b/study-status.html
@@ -91,27 +91,38 @@
 
 
 <div class="box-alert">
-      <h2>On a study break</h2>
-      <p>Registration for the [2015/16] academic year is now open.
-
-You told us you were taking a break from study last year. If you want to start studying again you can <a href="#">choose your modules now</a>.
-
-If you’re not planning to study in [2015/16) you can <a href="#">extend your study break</a>.</p>
+      <h2>Tell us your plans</h2>
+      <p> According to our records you are not currently studying. You can <a href="#">enrol on your next module(s)</a> now. If you're not planning to study you need to let us know, tell us your intentions below.</p>
 </div>
 
 <hr>
 
 <form>
-<p><strong>Select a statement that most accurately represents your current status</strong></p>
+<p><strong>Select the statement that matches your study plans</strong></p>
 
-<ul class="list-style2">
-<li><label><input type="radio" name="thing"> I intend to study this year</label></li>
-<li><label><input type="radio" name="thing"> I am taking a break from study</label></li>
-<li><label><input type="radio" name="thing"> I no longer want to study with the OU</label></li>
+<dl class="show-hide">
+  <dt>I plan to start my next module(s) at the next available start date</dt>
+  <dd><p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>. 
+  <p>The majority of our modules start in October and enrolment for these usually opens around February. So if you are looking to enrol between mid-September and February you may need to wait for enrolment to be open.</p>
+  <p>Please confirm:</p>
+  <ul class="list-style2">
+<li><label><input type="radio" name="thing">I plan to start my next module(s) at the next available start date</label></li>
 </ul>
-
 <p><input type="submit" value="Update" /></p>
+<dt>I need some time off from study</dt>
+<dd>You need to formally tell us if you're taking a break from studying your qualification. Find out more about <a href="#">requesting a study break</a>.
+<dd>
 
+<dt>I no longer want to study with the OU</dt>
+
+<dd>If you tell us that you don't intend to study we won't send you information about choosing your next modules. You may be entitled to <a href="#">claim a qualification</a> with the study you have already completed.
+  <ul class="list-style2">
+    <li><label><input type="radio" name="thing"> I no longer want to study with the OU</label></li>
+</ul>
+  
+  <p><input type="submit" value="Update" /></p>
+  
+ 
 </form>
 
 
