More from Elle in advance of testing

--- a/study-record-not-studying.html
+++ b/study-record-not-studying.html
@@ -153,8 +153,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <div class="box-alert">
 <!--message 2SH-->
-    <h2>Tell us your plans</h2>
-    <p>According to our records you are not currently studying. You need to let us know if you're  taking a break, <a href="http://stephenturvey.github.io/study-planning/study-status.html">update your study status</a>.</p>
+     <h2>Your qualification registration is about to lapse
+</h2>
+    <p>According to our records you are not currently studying and haven't done so in the last two academic years. This means your qualification registration is about to lapse and you may face financial implications. You may still be able to enrol now on a limited number of modules for this academic year. If you're not studying this year you can <a href="http://www2.open.ac.uk/students/help/are-you-currently-studying">tell us you're taking a break</a> and remain registered.</p>
     <!--end message 2SH-->
 </div>
 <div class="box-expand-collapse">
