--- a/study-record-on-break.html
+++ b/study-record-on-break.html
@@ -152,7 +152,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <div class="box-alert">
 <!--message 2SH-->
     <h2>You are on an approved study break until 1 August 2016</h2>
-    <p>If you're planning to start studying again from August 2016 you can enrol now. The deadline for enroling on most modules is [Oct FED for next AY]. If you need to extend your study break, update your study status.</p>
+    <p>If you're planning to start studying again from October 2016 you can enrol now. The deadline for enroling on most modules is 10 September 2016. If you can't study you can apply to <a href="http://www2.open.ac.uk/students/help/are-you-currently-studying">extend your study break</a>.</p>
     <!--end message 2SH-->
 </div>
 <div class="box-expand-collapse">
