--- a/study-record-resit.html
+++ b/study-record-resit.html
@@ -174,30 +174,30 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <h3><strong id="docs-internal-guid-42ebb8af-3d2c-9568-9a7b-4291b7f39be8">Resits, resubmissions and postponements </strong></h3>
 <table>
   <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Feb 2016</td>
-    <td>60 credits</td>
-    <td>Resit</td>
+    <td width="40%"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td width="20%">Feb 2016</td>
+    <td width="20%">60 credits</td>
+    <td width="20%">Resit</td>
   </tr>
 </table>
 <h3>Current modules</h3>
 
 <table>
   <tr>
-    <td><a href="module-record.html">Investigating the social world (DD103)</a></td>
-    <td>Oct 2015</td>
-    <td>60 credits</td>
-    <td>Enrolled</td>
+    <td width="40%"><a href="module-record.html">Investigating the social world (DD103)</a></td>
+    <td width="20%">Oct 2015</td>
+    <td width="20%">60 credits</td>
+    <td width="20%">Enrolled</td>
   </tr>
 </table>
 
 <h3>Postponed or entitled to resit or resubmit</h3>
 <table>
   <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Oct 2014</td>
-    <td>60 credits</td>
-    <td>Entitled to resit</td>
+    <td width="40%"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td width="20%">Oct 2014</td>
+    <td width="20%">60 credits</td>
+    <td width="20%">Entitled to resit</td>
   </tr>
  
 </table>
@@ -207,10 +207,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <table>
 
   <tr>
-    <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>Feb 2013</td>
-    <td>30 credits</td>
-    <td>Pass</td>
+    <td width="40%"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+    <td width="20%">Feb 2013</td>
+    <td width="20%">30 credits</td>
+    <td width="20%">Pass</td>
   </tr>
 </table>
 
@@ -290,7 +290,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       </table>
     </div>
     <!-- end box-expand-collapse-inner -->
-  </div> 
+<!--   </div>  -->
   <!-- end box-expand-collapse -->
 
 
