--- a/study-record.html
+++ b/study-record.html
@@ -388,7 +388,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </ul>
   
 <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
-<p class="box-link"><a href="#">Your student loan</a></p>
+<p class="box-link"><a href="#" class="ou-btn">Your student loan</a></p>
+<!-- <p class="box-link"><a href="#">Your student loan</a></p> -->
 </div>
 
 <div class="box box-downloads">
