--- a/study-record-access.html
+++ b/study-record-access.html
@@ -178,25 +178,19 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </table>
 <p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
 
-<div class="box-expand-collapse-inner">
- <div class="box-expand-collapse">
-    <h2>Your Access module <a href="#" class="show-hide minus">Expand/collapse</a></h2>
-    <div class="box-expand-collapse-inner">
-    <p>This is your first step on your journey towards a qualfication. While the credit from it doesn't count towards a qualification you are gaining the skills and knowledge to help you suceed in study.</p>
-      <table>
-        <tr>
-          <td><a href="module-record.html">Arts and languages Access module (Y031) </a></td>
-          <td>Oct 2015</td>
-          <td>30 credits</td>
-          <td>Enrolled</td>
-        </tr>
-      </table>
-      <p>Thinking about your next steps? Take a look at <a href="#">Moving on from Access</a></p>
-    </div>
-    <!-- end box-expand-collapse-inner -->
-  </div>
+<hr>
 
-
+  <h3>Your Access module</h3>
+  <p>This is your first step on your journey towards a qualfication. While the credit from it doesn't count towards a qualification you are gaining the skills and knowledge to help you suceed in study.</p>
+  <table>
+    <tr>
+      <td><a href="module-record.html">Arts and languages Access module (Y031) </a></td>
+      <td>Oct 2015</td>
+      <td>30 credits</td>
+      <td>Enrolled</td>
+    </tr>
+  </table>
+  <p>Thinking about your next steps? Take a look at <a href="#">Moving on from Access</a></p>
 
 <hr>
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) English Literature and Creative Writing</p>
