study record column alignment

--- a/study-record-access.html
+++ b/study-record-access.html
@@ -184,10 +184,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <p>This is your first step on your journey towards a qualfication. While the credit from it doesn't count towards a qualification you are gaining the skills and knowledge to help you suceed in study.</p>
   <table>
     <tr>
-      <td><a href="module-record.html">Arts and languages Access module (Y031) </a></td>
-      <td>Oct 2015</td>
-      <td>30 credits</td>
-      <td>Enrolled</td>
+      <td class="col-title"><a href="module-record.html">Arts and languages Access module (Y031) </a></td>
+      <td class="col-date">Oct 2015</td>
+      <td class="col-credits">30 credits</td>
+      <td class="col-status">Enrolled</td>
     </tr>
   </table>
   <p>Thinking about your next steps? Take a look at <a href="#">Moving on from Access</a></p>
