--- a/study-record-deferred-enrolled-next-pres.html
+++ b/study-record-deferred-enrolled-next-pres.html
@@ -174,48 +174,50 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <td>360 credits</td>
   </tr>
 </table>
+
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 
 <hr>
 
 <h3>Enrolled modules</h3>
+
 <table>
   <tr>
-    <td><a href="module-record.html"> Investigating the social world (DD103)</a></td>
-    <td>Oct 2016</td>
-    <td>60 credits</td>
-    <td>Enrolled</td>
+    <td class="col-title"><a href="module-record.html">Investigating the social world (DD103)</a></td>
+    <td class="col-date">Oct 2016</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Enrolled</td>
   </tr>
 </table>
 
 
-
 <h3>Deferred modules</h3>
+
 <table>
   <tr>
-    <td><a href="module-record.html"> Investigating the social world (DD103)</a></td>
-    <td>Oct 2015</td>
-    <td>60 credits</td>
-    <td>(deferred, assessment banked)
-      </td>
+    <td class="col-title"><a href="module-record.html"> Investigating the social world (DD103)</a></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">(deferred, assessment banked)</td>
   </tr>
 </table>
 <h3>Completed modules</h3>
 <table>
   <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Oct 2014</td>
-     <td>60 credits</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td class="col-date">Oct 2014</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Pass</td>
    
   </tr>
   <tr>
-    <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>Oct 2013</td>
-        <td>30 credits</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+    <td class="col-date">Oct 2013</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
 </table>
+
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
 <hr>
@@ -266,9 +268,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <dd>
 <p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
 </dd>
-
-<dt>&nbsp;</dt>
-<dd>&nbsp;</dd>
 
   <dt>Qualification Fee</dt>
 <dd>
