--- a/study-record-deferred.html
+++ b/study-record-deferred.html
@@ -177,33 +177,35 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 
 <hr>
+
 <h3>Deferred modules</h3>
+
 <table>
   <tr>
     <td><a href="module-record.html"> Investigating the social world (DD103)</a></td>
-    <td>Oct 2015</td>
-    <td>60 credits</td>
-    <td>  
-      <p>(deferred, assessment banked)</p>
-      <p><a href="#">Enrol on next presentation</a></p></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status"><p>(deferred, assessment banked)</p> <p><a href="#">Enrol on next presentation</a></p></td>
   </tr>
 </table>
+
 <h3>Completed modules</h3>
+
 <table>
   <tr>
     <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Oct 2014</td>
-     <td>60 credits</td>
-    <td>Pass</td>
-   
+    <td class="col-date">Oct 2014</td>
+     <td class="col-credits">60 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
   <tr>
     <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>Oct 2013</td>
-        <td>30 credits</td>
-    <td>Pass</td>
+    <td class="col-date">Oct 2013</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
 </table>
+
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
 <hr>
