--- a/study-record-failed-cancelled.html
+++ b/study-record-failed-cancelled.html
@@ -127,13 +127,13 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
    <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html" selected>Access Module</option>
+    <option value="study-record-access.html">Access Module</option>
     <option value="study-record-resit.html">Resit</option>
       <option value="study-record-failed-resit.html" selected>Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
     <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
     <option value="study-record-deferred-completed.html">Deferred - completed</option>
-    <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
+    <option value="study-record-failed-cancelled.html" selected>Failed/Cancelled</option>
     <option value="study-record-module-only.html">Module Only</option>
     <option value="study-record-finished-access.html">Finished Access</option>
     <option value="study-record-moved-on-from-access.html">Moved on from Access</option>
@@ -178,7 +178,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <table>
   <tr>
-    <td><a href="module-record.html">Investigating the social world (DD103)</a></td>
+    <td class="col-title"><a href="module-record.html">Investigating the social world (DD103)</a></td>
+    <td class="col-date">&nbsp;</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">&nbsp;</td>
   </tr>
 </table>
 
@@ -186,14 +189,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <h3>Completed modules</h3>
 <table>
   <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>2014</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td class="col-date">2014</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>2013</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+    <td class="col-date">2013</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Pass</td>
   </tr>
 </table>
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
@@ -271,9 +276,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <div class="box-expand-collapse-inner">
       <table>
         <tr>
-          <td><a href="module-record.html">An introduction to business studies (B120)</a></td>
-          <td>2014</td>
-          <td>Pass</td>
+          <td class="col-title"><a href="module-record.html">An introduction to business studies (B120)</a></td>
+          <td class="col-date">2014</td>
+    		<td class="col-credits">&nbsp;</td>
+          <td class="col-status">Pass</td>
         </tr>
        
     </table>
@@ -289,14 +295,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
    
       <table>
         <tr>
-          <td><a href="module-record.html">An introduction to business studies (B120)</a></td>
-          <td>2013</td>
-          <td>Fail</td>
+          <td class="col-title"><a href="module-record.html">An introduction to business studies (B120)</a></td>
+          <td class="col-date">2013</td>
+   		 <td class="col-credits">&nbsp;</td>
+          <td class="col-status">Fail</td>
         </tr>
         <tr>
-          <td><a href="module-record.html">An introduction to retail management and marketing (B122)</a></td>
-          <td>2012</td>
-          <td>Cancelled</td>
+          <td class="col-title"><a href="module-record.html">An introduction to retail management and marketing (B122)</a></td>
+          <td class="col-date">2012</td>
+    		<td class="col-credits">&nbsp;</td>
+          <td class="col-status">Cancelled</td>
         </tr>
       </table>
     </div>
