--- a/study-record-module-only.html
+++ b/study-record-module-only.html
@@ -125,14 +125,14 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
    <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html" selected>Access Module</option>
+    <option value="study-record-access.html">Access Module</option>
     <option value="study-record-resit.html">Resit</option>
       <option value="study-record-failed-resit.html" selected>Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
     <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
     <option value="study-record-deferred-completed.html">Deferred - completed</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
-    <option value="study-record-module-only.html">Module Only</option>
+    <option value="study-record-module-only.html" selected>Module Only</option>
     <option value="study-record-finished-access.html">Finished Access</option>
     <option value="study-record-moved-on-from-access.html">Moved on from Access</option>
   </select>
@@ -156,10 +156,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   
       <table>
         <tr>
-          <td><a href="module-record.html">Arts and languages Access module (Y031)</a></td>
-          <td>Oct 2015</td>
-          <td>30 credits</td>
-          <td>Enrolled</td>
+          <td class="col-title"><a href="module-record.html">Arts and languages Access module (Y031)</a></td>
+          <td class="col-date">Oct 2015</td>
+          <td class="col-credits">30 credits</td>
+          <td class="col-status">Enrolled</td>
         </tr>
       </table>
         <p>An Access module gives you a fantastic introduction to study. If you'd like to build on what you've learnt and study towards a qualification find out more about <a href="#">Moving on from Access</a>.
@@ -173,10 +173,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       <h3>Your Access module</h3>
       <table>
         <tr>
-          <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-          <td>Oct 2013</td>
-          <td>30 credits</td>
-          <td>Pass</td>
+          <td class="col-title"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+          <td class="col-date">Oct 2013</td>
+          <td class="col-credits">30 credits</td>
+          <td class="col-status">Pass</td>
         </tr>
       </table>
       <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a></p>
@@ -190,14 +190,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       <h3>Completed modules</h3>
       <table>
         <tr>
-          <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-          <td>Feb 2014</td>
-          <td>Fail</td>
+          <td class="col-title"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+          <td class="col-date">Feb 2014</td>
+          <td class="col-credits">&nbsp;</td>
+          <td class="col-status">Fail</td>
         </tr>
         <tr>
-          <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-          <td>Oct 2012</td>
-          <td>Cancelled</td>
+          <td class="col-title"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+          <td class="col-date">Oct 2012</td>
+          <td class="col-credits">&nbsp;</td>
+          <td class="col-status">Cancelled</td>
         </tr>
       </table>
       <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a></p>
