--- a/study-record-moved-on-from-access.html
+++ b/study-record-moved-on-from-access.html
@@ -183,19 +183,19 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <h3>Enrolled modules</h3>
 <table>
   <tr>
-    <td><a href="module-record.html">Voices, texts and material culture (A105)</a></td>
-    <td>Oct 2015</td>
-    <td>60 credits</td>
-    <td>Enrolled</td>
+    <td class="col-title"><a href="module-record.html">Voices, texts and material culture (A105)</a></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Enrolled</td>
   </tr>
 </table>
 <h3>Completed modules</h3>
 <table>
   <tr>
-    <td height="21"><a href="module-record.html">The arts and the present (AA100)</a></td>
-    <td>Oct 2014</td>
-    <td>60 credits</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html">The arts and the present (AA100)</a></td>
+    <td class="col-date">Oct 2014</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
 </table>
 
@@ -205,10 +205,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <p>Your Access module represents your first step towards a qualification. The credit from it does not count towards your qualification but it means you are better prepared for your studies.      </p>
     <table>
       <tr>
-          <td><a href="module-record.html">Starting with psychology (Y183)</a></td>
-          <td>Oct 2013</td>
-          <td>30 credits</td>
-          <td>Pass</td>
+          <td class="col-title"><a href="module-record.html">Starting with psychology (Y183)</a></td>
+          <td class="col-date">Oct 2013</td>
+          <td class="col-credits">30 credits</td>
+          <td class="col-status">Pass</td>
         </tr>
   </table>
     </div>
