--- a/study-record-resit.html
+++ b/study-record-resit.html
@@ -167,50 +167,53 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <td>360 credits</td>
   </tr>
 </table>
+
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 
 <hr>
 
 <h3><strong id="docs-internal-guid-42ebb8af-3d2c-9568-9a7b-4291b7f39be8">Resits, resubmissions and postponements </strong></h3>
+
 <table>
   <tr>
-    <td width="40%"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td width="20%">Feb 2016</td>
-    <td width="20%">60 credits</td>
-    <td width="20%">Resit</td>
+    <td class="col-title"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td class="col-date">Feb 2016</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Resit</td>
   </tr>
 </table>
+
 <h3>Current modules</h3>
 
 <table>
   <tr>
-    <td width="40%"><a href="module-record.html">Investigating the social world (DD103)</a></td>
-    <td width="20%">Oct 2015</td>
-    <td width="20%">60 credits</td>
-    <td width="20%">Enrolled</td>
+    <td class="col-title"><a href="module-record.html">Investigating the social world (DD103)</a></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Enrolled</td>
   </tr>
 </table>
 
 <h3>Postponed or entitled to resit or resubmit</h3>
+
 <table>
   <tr>
-    <td width="40%"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td width="20%">Oct 2014</td>
-    <td width="20%">60 credits</td>
-    <td width="20%">Entitled to resit</td>
+    <td class="col-title"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td class="col-date">Oct 2014</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Entitled to resit</td>
   </tr>
- 
 </table>
 
 
 <h3>Completed modules</h3>
-<table>
 
+<table>
   <tr>
-    <td width="40%"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td width="20%">Feb 2013</td>
-    <td width="20%">30 credits</td>
-    <td width="20%">Pass</td>
+    <td class="col-title"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+    <td class="col-date">Feb 2013</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
 </table>
 
