--- a/study-record.html
+++ b/study-record.html
@@ -177,7 +177,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <td>360 credits</td>
   </tr>
 </table>
+
 <p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
+
 <hr>
 
 <h3>Enrolled modules</h3>
@@ -185,16 +187,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <table>
   <tr>
-    <td><a href="module-record-a-t276.html">Engineering: professions, practice and skills 2 (T276)</a></td>
-    <td>Feb 2016</td>
-    <td>30 credits</td>
-    <td>Enrolled</td>
+    <td class="col-title"><a href="module-record-a-t276.html">Engineering: professions, practice and skills 2 (T276)</a></td>
+    <td class="col-date">Feb 2016</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Enrolled</td>
   </tr>
   <tr>
-    <td><a href="module-record-a-t218.html">Design for engineers (T218)</a></td>
-    <td>Oct 2015</td>
-        <td>30 credits</td>
-    <td>Enrolled</td>
+    <td class="col-title"><a href="module-record-a-t218.html">Design for engineers (T218)</a></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Enrolled</td>
   </tr>
 </table>
 
@@ -203,38 +205,41 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <table>
   <tr>
-    <td><a href="module-record.html"> Engineering: mechanics, materials, design (T207)</a></td>
-    <td>Oct 2014</td>
-    <td>60 credits</td>
-    <td>Grade 3 pass</td>
+    <td class="col-title"><a href="module-record.html"> Engineering: mechanics, materials, design (T207)</a></td>
+    <td class="col-date">Oct 2014</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Grade 3 pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Engineering: professions, practice and skills 1 (T176)</a></td>
-    <td>Feb 2014</td>
-     <td>60 credits</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html">Engineering: professions, practice and skills 1 (T176)</a></td>
+    <td class="col-date">Feb 2014</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Exploring mathematics (MS221)</a></td>
-    <td>Oct 2013</td>
-     <td>30 credits</td>
-    <td>Grade 4 pass</td>
+    <td class="col-title"><a href="module-record.html">Exploring mathematics (MS221)</a></td>
+    <td class="col-date">Oct 2013</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Grade 4 pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Using mathematics (MST121)</a></td>
-    <td>Feb 2013</td>
-     <td>60 credits</td>
-    <td>Grade 3 pass</td>
+    <td class="col-title"><a href="module-record.html">Using mathematics (MST121)</a></td>
+    <td class="col-date">Feb 2013</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Grade 3 pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Engineering the future (T173)</a></td>
-    <td>Oct 2012</td>
-     <td>30 credits</td>
-    <td>Distinction</td>
+    <td class="col-title"><a href="module-record.html">Engineering the future (T173)</a></td>
+    <td class="col-date">Oct 2012</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Distinction</td>
   </tr>
 </table>
+
 <h3>Credit transfer</h3>
+
 <p>You have been awarded 60 credits towards this qualification</p>
+
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
 <hr>
