--- a/study-record-deferred-completed.html
+++ b/study-record-deferred-completed.html
@@ -177,27 +177,31 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 
 <h3>Completed modules</h3>
+
 <table>
  <tr>
-    <td><a href="module-record.html"> Investigating the social world (DD103)</a></td>
-    <td>Oct 2016</td>
-    <td>60 credits</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html"> Investigating the social world (DD103)</a></td>
+    <td class="col-date">Oct 2016</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
+  
   <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Oct 2014</td>
-     <td>60 credits</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td class="col-date">Oct 2014</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Pass</td>
    
   </tr>
+  
   <tr>
-    <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>Oct 2013</td>
-        <td>30 credits</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+    <td class="col-date">Oct 2013</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
 </table>
+
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
 <hr>
@@ -269,11 +273,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
    
      <table>
   <tr>
-    <td><a href="module-record.html"> Investigating the social world (DD103)</a></td>
-    <td>Oct 2015</td>
-    <td>60 credits</td>
-    <td>(deferred, assessment banked)
-      </td>
+    <td class="col-title"><a href="module-record.html"> Investigating the social world (DD103)</a></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">(deferred, assessment banked)</td>
   </tr>
 </table>
     </div>
