--- a/study-record-failed-resit.html
+++ b/study-record-failed-resit.html
@@ -173,10 +173,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <table>
   <tr>
-    <td><a href="module-record.html">Investigating the social world (DD103)</a></td>
-    <td>Oct 2015</td>
-    <td>60 credits</td>
-    <td>Enrolled</td>
+    <td class="col-title"><a href="module-record.html">Investigating the social world (DD103)</a></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Enrolled</td>
   </tr>
 </table>
 
@@ -184,10 +184,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <table>
 
   <tr>
-    <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>Feb 2013</td>
-    <td>30 credits</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+    <td class="col-date">Feb 2013</td>
+    <td class="col-credits">30 credits</td>
+    <td class="col-status">Pass</td>
   </tr>
 </table>
 
