--- a/study-record-finished-access.html
+++ b/study-record-finished-access.html
@@ -175,20 +175,24 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   </tr>
 </table>
 <p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
+
 <hr>
+
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) English Language and Literature</p>
 
 <hr>
 
 <h3>Enrolled modules</h3>
+
 <table>
   <tr>
-    <td><a href="module-record.html">Voices, texts and material culture (A105)</a></td>
-    <td>Oct 2015</td>
-    <td>60 credits</td>
-    <td>Enrolled</td>
+    <td class="col-title"><a href="module-record.html">Voices, texts and material culture (A105)</a></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">60 credits</td>
+    <td class="col-status">Enrolled</td>
   </tr>
 </table>
+
 <!--<h3>Completed modules</h3>
 <table>
   <tr>
@@ -205,10 +209,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <p>Thinking about your next steps? Take a look at <a href="#">Moving on from Access</a></p>
       <table>
         <tr>
-          <td><a href="module-record.html">Starting with psychology (Y183)</a></td>
-          <td>Oct 2013</td>
-          <td>30 credits</td>
-          <td>Pass</td>
+          <td class="col-title"><a href="module-record.html">Starting with psychology (Y183)</a></td>
+          <td class="col-date">Oct 2013</td>
+          <td class="col-credits">30 credits</td>
+          <td class="col-status">Pass</td>
         </tr>
     </table>
     </div>
