--- a/study-record-old-framework.html
+++ b/study-record-old-framework.html
@@ -128,7 +128,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <option value="study-record-open-degree.html">Open Degree</option>
     <option value="study-record-access.html" >Access Module</option>
     <option value="study-record-resit.html">Resit</option>
-      <option value="study-record-failed-resit.html" selected>Failed resit</option>
+      <option value="study-record-failed-resit.html">Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
     <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
     <option value="study-record-deferred-completed.html">Deferred - completed</option>
@@ -187,11 +187,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <h3>Enrolled modules</h3>
 <table>
   <tr>
-    <td><a href="module-record.html">Engineering: professions, practice and skills 2 (T276)</a></td>
-    <td>Oct 2015</td>
+    <td class="col-title"><a href="module-record.html">Engineering: professions, practice and skills 2 (T276)</a></td>
+    <td class="col-date">Oct 2015</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">&nbsp;</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Design for engineers (T218)</a></td><td>Feb 2016</td>
+    <td class="col-title"><a href="module-record.html">Design for engineers (T218)</a></td>
+    <td class="col-date">Feb 2016</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">&nbsp;</td>
   </tr>
 </table>
 
@@ -200,29 +205,34 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <table>
   <tr>
-    <td><a href="module-record.html"> Engineering: mechanics, materials, design (T207)</a></td>
-    <td>2014</td>
-    <td>Grade 3 pass</td>
+    <td class="col-title"><a href="module-record.html"> Engineering: mechanics, materials, design (T207)</a></td>
+    <td class="col-date">2014</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Grade 3 pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Engineering: professions, practice and skills 1 (T176)</a></td>
-    <td>2014</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html">Engineering: professions, practice and skills 1 (T176)</a></td>
+    <td class="col-date">2014</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Exploring mathematics (MS221)</a></td>
-    <td>2013</td>
-    <td>Grade 4 pass</td>
+    <td class="col-title"><a href="module-record.html">Exploring mathematics (MS221)</a></td>
+    <td class="col-date">2013</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Grade 4 pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Using mathematics (MST121)</a></td>
-    <td>2013</td>
-    <td>Grade 3 pass</td>
+    <td class="col-title"><a href="module-record.html">Using mathematics (MST121)</a></td>
+    <td class="col-date">2013</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Grade 3 pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Engineering the future (T173)</a></td>
-    <td>2012</td>
-    <td>Distinction</td>
+    <td class="col-title"><a href="module-record.html">Engineering the future (T173)</a></td>
+    <td class="col-date">2012</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Distinction</td>
   </tr>
 </table>
 
