--- a/study-record-open-degree.html
+++ b/study-record-open-degree.html
@@ -170,6 +170,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <td>360 credits</td>
   </tr>
 </table>
+
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 
 <hr>
@@ -178,25 +179,31 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <table>
   <tr>
-    <td><a href="module-record.html">Investigating the social world (DD103)</a></td>
-    <td>Oct 2016</td>
+    <td class="col-title"><a href="module-record.html">Investigating the social world (DD103)</a></td>
+    <td class="col-date">Oct 2016</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">&nbsp;</td>
   </tr>
 </table>
 
 
 <h3>Completed modules</h3>
+
 <table>
   <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Feb 2014</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td class="col-date">Feb 2014</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Pass</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>Feb 2013</td>
-    <td>Pass</td>
+    <td class="col-title"><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+    <td class="col-date">Feb 2013</td>
+    <td class="col-credits">&nbsp;</td>
+    <td class="col-status">Pass</td>
   </tr>
 </table>
+
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
 <hr>
