mod rec, profile updates

--- a/profile.html
+++ b/profile.html
@@ -107,8 +107,7 @@
         <p>Your record of all current and past OU studies.</p>
       	<ul class="list-style2">
       	  <li><a href="study-record.html">Study record</a></li>
-      	  <li><a href="study-status.html">Current study status</a></li>
-          <li><a href="finance.html">Your payment and funding</a></li>
+          <li><a href="finance.html">Your student loan</a></li>
   		</ul>
 </div>
 </div>
