--- a/study-record-finished-access.html
+++ b/study-record-finished-access.html
@@ -204,7 +204,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <div class="box-access">
     <h2>Your Access module</h2>
-    <div class="box-expand-collapse-inner">
+    <div class="box-access-inner">
     <p>Congratulations on passing your access module. This represents your first step towards a qualification. The credit from it does not count towards your qualification but it means you are better prepared for your studies.</p>
     <p>Thinking about your next steps? Take a look at <a href="#">Moving on from Access</a></p>
       <table>
