mod rec table, toc updates

--- a/module-record-a-t276.html
+++ b/module-record-a-t276.html
@@ -80,7 +80,7 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome-a.html">StudentHome</a></li>
 	<li><a href="profile-a.html">Profile</a></li>
-  <li><a href="study-record-a.html">Study record</a></li>
+  <li><a href="study-record.html">Study record</a></li>
 	<li>T276 Engineering: professions, practice and skills 2</li>
 </ol>
 
@@ -99,6 +99,22 @@
 </ul>
 
 
+<dl class="ou-toc">
+    <dt>On this page</dt>
+    <dd>
+        <ul>
+            <li><a href="#item1">Module status</a></li>
+            <li><a href="#item2">Assessment</a></li>
+            <li><a href="#item3">Tutorial dates</a></li>
+            <li><a href="#item4">Student Support Team</a></li>
+            <li><a href="#item5">Residential school</a></li>
+            <li><a href="#item6">Your qualifications</a></li>
+            <li><a href="#item7">Quality assurance</a></li>
+        </ul>
+    </dd>
+</dl>
+
+
 <div class="ou-block">
 
     <h2 class="style1" id="item1">Module status</h2>
@@ -112,7 +128,7 @@
 
     <h2 class="style1" id="item2">Assessment</h2>
     
-    <table>
+    <table class="alt">
     <tbody><tr><th>Assignment</th>
     <th>Score</th>
     <th>Cut-off date</th>
@@ -242,20 +258,6 @@
 
 <div class="r3 aside">
 
-	<dl class="ou-toc">
-    	<dt>On this page</dt>
-        <dd>
-            <ul>
-                <li><a href="#item1">Module status</a></li>
-                <li><a href="#item2">Assessment</a></li>
-                <li><a href="#item3">Tutorial dates</a></li>
-                <li><a href="#item4">Student Support Team</a></li>
-                <li><a href="#item5">Residential school</a></li>
-                <li><a href="#item6">Your qualifications</a></li>
-                <li><a href="#item7">Quality assurance</a></li>
-            </ul>
-    	</dd>
-    </dl>
 
     <div class="box box-questions">
     <h2>How do I?</h2>
