--- a/module-record.html
+++ b/module-record.html
@@ -132,15 +132,13 @@
     </tr>
     <tr>
       <td>Overall continuous assessment score (OCAS):</td>
-      <td><strong>87</strong></td>
-    </tr>
-    <tr>
-      <td>Substitution applied.</td>
-      <td></td>
+      <td><strong>87*</strong></td>
     </tr>
     </tbody>
     </table>
 
+    <p>*Substitution has been applied.</p>
+    
     <ul class="pdf">
         <li><a href="https://css3.open.ac.uk/ResultsRelease/Pages/PDF/ResultLetter.ashx?id=QzM2NzA3MDR8VDIwN3wxfDE0Sg==">Download your result letter (PDF)</a></li>
         <li><a href="http://msds.open.ac.uk/your-record/extra/module-result-notes.pdf">Notes to accompany your module result (PDF)</a></li>
