--- a/module-record.html
+++ b/module-record.html
@@ -379,6 +379,13 @@
     <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
     
     </div>
+    
+    <div class="box box-links">
+    <h2>Module links</h2>
+    <ul>
+      <li><a href="#">Learning with the OU</a></li>
+    </ul>    
+    </div>
 
 </div>
 </div>
