Module link box added

--- a/module-record-a-t276.html
+++ b/module-record-a-t276.html
@@ -273,6 +273,17 @@
     
     </div>
 
+    <div class="box">
+    <h2>Module links</h2>
+    <ul>
+      <li><a href="#">Module website</a></li>
+      <li><a href="#">Assessment handbook</a></li>
+      <li><a href="#">Assignment dates</a></li>
+      <li><a href="#">Tutorial dates</a></li>
+      <li><a href="#">Exam dates</a></li>
+    </ul>
+    </div>
+
 </div>
 
 
